# smarthome-chrome-controller

./: Makefile  README.md  driver.py  profiles.yaml  pyproject.toml  requirements.txt
chrome-ctrl-server/: driver.py
chrome-ctrl-server/utils/: controller.py  logger.py
chromectrl/: __init__.py  main.py
chromectrl/utils/: controller.py  process.py
controller/: controller.py
utils/: controller.py  process.py
