[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chromectrl"
version = "0.0.1"
authors = [
    { name = "John Craig", email="john.e.craig.jr@protonmail.com"}
]
description = "Smarthome Chrome Controller"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.7",
    "PyChromeDevTools>=0.4"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
chromectrl = 'chromectrl:chromectrl_cli'